--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href = "styles.css">
     <link rel="stylesheet" href = "fonts.css">
-    <link rel="icon" href="Imagenes/favicon-32x32.png" type="image/x-icon"> 
+    <link rel="icon" href="imagenes/favicon-32x32.png" type="image/x-icon"> 
     <title>Pepsi</title>
 </head>
 <body>
