--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href = "styles.css">
     <link rel="stylesheet" href = "fonts.css">
-    <link rel="icon" href="imagenes/favicon-32x32.png" type="image/x-icon"> 
+    <link rel="icon" href="Imagenes/favicon-32x32.png" type="image/x-icon"> 
     <title>Pepsi</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
 
         <header class="flexheader">
             <div class="logo">
-                <img src="imagenes/imagen3.png" alt="Logo" title="logo">
+                <img src="Imagenes/imagen3.png" alt="Logo" title="logo">
             </div>
             <nav id="menu">
                 <a href="#seccion1" title="Home">HOME</a>
@@ -34,7 +34,7 @@
 
                 <div class="sabores">
                     <div class="imagen">
-                        <img src="imagenes/pepsi berry.png" alt="Sabor 1" title="Sabor 1">
+                        <img src="Imagenes/pepsi berry.png" alt="Sabor 1" title="Sabor 1">
                     </div>
                     <h2>PEPSI BERRY</h2>
                     <p>Pepsi Berry combina el sabor auténtico de Pepsi con una explosión de frutos del bosque. Su toque frutal de arándanos y moras añade una dimensión refrescante y audaz que despierta los sentidos. Perfecta para quienes buscan una experiencia nueva sin dejar de lado la esencia Pepsi.</p>
@@ -42,7 +42,7 @@
 
                 <div class="sabores">
                     <div class="imagen">
-                        <img src="imagenes/Pepsi estandar.png" alt="Sabor 1" title="Sabor 1">
+                        <img src="Imagenes/Pepsi estandar.png" alt="Sabor 1" title="Sabor 1">
                     </div>
                     <h2>PEPSI ESTANDAR</h2>
                     <p>La Pepsi original, con su sabor inconfundible, refrescante y perfectamente equilibrado. Una bebida carbonatada que ha conquistado generaciones con su mezcla única de dulzura y chispa. Ideal para cualquier momento, Pepsi clásica es sinónimo de tradición, energía y actitud.</p>
@@ -50,7 +50,7 @@
 
                 <div class="sabores">
                     <div class="imagen">
-                        <img src="imagenes/Pepsi mango.png" alt="Sabor 1" title="Sabor 1">
+                        <img src="Imagenes/Pepsi mango.png" alt="Sabor 1" title="Sabor 1">
                     </div>
                     <h2>PEPSI MANGO</h2>
                     <p>Pepsi Mango ofrece una fusión tropical irresistible: la clásica efervescencia de Pepsi con el dulzor jugoso del mango maduro. El balance entre lo frutal y lo burbujeante la convierte en una bebida atrevida, vibrante y refrescante para disfrutar en cualquier ocasión.</p>
